syntax = "proto3";

package multisig_faucet;

option go_package = "github.com/mezonai/mmn/proto";

service MultisigFaucetService {
  rpc CreateFaucetRequest(CreateFaucetRequestRequest) returns (CreateFaucetRequestResponse);
  rpc AddSignature(AddSignatureRequest) returns (AddSignatureResponse);
  rpc ExecuteTransaction(ExecuteTransactionRequest) returns (ExecuteTransactionResponse);
  rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
  rpc AddToApproverWhitelist(AddToApproverWhitelistRequest) returns (AddToApproverWhitelistResponse);
  rpc AddToProposerWhitelist(AddToProposerWhitelistRequest) returns (AddToProposerWhitelistResponse);
  rpc RemoveFromApproverWhitelist(RemoveFromApproverWhitelistRequest) returns (RemoveFromApproverWhitelistResponse);
  rpc RemoveFromProposerWhitelist(RemoveFromProposerWhitelistRequest) returns (RemoveFromProposerWhitelistResponse);
  rpc CheckWhitelistStatus(CheckWhitelistStatusRequest) returns (CheckWhitelistStatusResponse);
}

message CreateFaucetRequestRequest {
  string multisig_address = 1;
  string recipient = 2;
  string amount = 3;
  string text_data = 4;
  string signer_pubkey = 5;
  string signature = 6;
}

message CreateFaucetRequestResponse {
  bool success = 1;
  string message = 2;
  string tx_hash = 3;
}

message AddSignatureRequest {
  string tx_hash = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message AddSignatureResponse {
  bool success = 1;
  string message = 2;
  int32 signature_count = 3;
}

message ExecuteTransactionRequest {
  string tx_hash = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message ExecuteTransactionResponse {
  bool success = 1;
  string message = 2;
  string tx_hash = 3;
}

message GetTransactionStatusRequest {
  string tx_hash = 1;
}

message GetTransactionStatusResponse {
  bool success = 1;
  string message = 2;
  string status = 3;
  int32 signature_count = 4;
  int32 required_signatures = 5;
}

message AddToApproverWhitelistRequest {
  string address = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message AddToApproverWhitelistResponse {
  bool success = 1;
  string message = 2;
}

message AddToProposerWhitelistRequest {
  string address = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message AddToProposerWhitelistResponse {
  bool success = 1;
  string message = 2;
}

message RemoveFromApproverWhitelistRequest {
  string address = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message RemoveFromApproverWhitelistResponse {
  bool success = 1;
  string message = 2;
}

message RemoveFromProposerWhitelistRequest {
  string address = 1;
  string signer_pubkey = 2;
  string signature = 3;
}

message RemoveFromProposerWhitelistResponse {
  bool success = 1;
  string message = 2;
}

message CheckWhitelistStatusRequest {
  string address = 1;
}

message CheckWhitelistStatusResponse {
  bool success = 1;
  string message = 2;
  bool is_approver = 3;
  bool is_proposer = 4;
}
